--- a/RPGPlugin/Torch GUI/RPGPluginControl.xaml
+++ b/RPGPlugin/Torch GUI/RPGPluginControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Roles.RolesControl"
+﻿<UserControl x:Class="RPGPlugin.RolesControl"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Roles"
+      xmlns:local="clr-namespace:RPGPlugin"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
