--- a/RPGPlugin/Torch GUI/EditOreWindow.xaml
+++ b/RPGPlugin/Torch GUI/EditOreWindow.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="RPGPlugin.AddOreWindow"
+﻿<Window x:Class="RPGPlugin.EditOreWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add new ore" Height="300" Width="350">
+        Title="Edit ore" Height="200" Width="350">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -21,14 +20,6 @@
         <Label Content="Exp per ore:" Grid.Column="0" Grid.Row="1" Margin="10"/>
         <TextBox x:Name="ExpPerOreTextBox" Grid.Column="1" Grid.Row="1" Margin="10"/>
 
-        <Button Content="Add ore" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,0" Click="AddOreButton_Click" Width="73" Height="23"/>
-        <Button Content="Save" Grid.Row="2" Margin="174,10,10,0" Click="SaveButton_Click" Height="23" Grid.RowSpan="2" Grid.Column="1" VerticalAlignment="Top"/>
-
-        <DataGrid x:Name="OreDataGrid" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,10,10,10" AutoGenerateColumns="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Mineral" Binding="{Binding OreName}" Width="*" />
-                <DataGridTextColumn Header="Experience" Binding="{Binding ExpPerOre}" Width="*" />
-            </DataGrid.Columns>
-        </DataGrid>
+        <Button Content="Save" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,59" Click="AddButton_Click" Width="73" Height="23"/>
     </Grid>
 </Window>
