--- a/RPGPlugin/Torch GUI/AddOreWindow.xaml
+++ b/RPGPlugin/Torch GUI/AddOreWindow.xaml
@@ -1,7 +1,29 @@
 ﻿<Window x:Class="RPGPlugin.AddOreWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add new ore" Height="300" Width="350">
+        Title="RPGPLUGIN - ADD NEW ORE" Height="300" Width="350">
+    <Window.Resources>
+        <Style x:Key="LabelStyle" TargetType="Label">
+            <Setter Property="Foreground" Value="DarkSlateGray"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Margin" Value="10"/>
+        </Style>
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Background" Value="DarkSlateGray"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Padding" Value="10,5"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+        <Style x:Key="TabItemStyle" TargetType="TabItem">
+            <Setter Property="Foreground" Value="DarkSlateGray"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Padding" Value="10,5"/>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -15,16 +37,16 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Content="Ore name:" Grid.Column="0" Grid.Row="0" Margin="10"/>
+        <Label Content="Ore name:" Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}"/>
         <TextBox x:Name="OreNameTextBox" Grid.Column="1" Grid.Row="0" Margin="10"/>
 
-        <Label Content="Exp per ore:" Grid.Column="0" Grid.Row="1" Margin="10"/>
+        <Label Content="Exp per ore:" Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}"/>
         <TextBox x:Name="ExpPerOreTextBox" Grid.Column="1" Grid.Row="1" Margin="10"/>
 
-        <Button Content="Add ore" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,0" Click="AddOreButton_Click" Width="73" Height="23"/>
-        <Button Content="Save" Grid.Row="2" Margin="174,10,10,0" Click="SaveButton_Click" Height="23" Grid.RowSpan="2" Grid.Column="1" VerticalAlignment="Top"/>
+        <Button Content="ADD ORE" Grid.Row="2" Grid.Column="0" Margin="10,10,10,0" Click="AddOreButton_Click" Height="28" VerticalAlignment="Top" Style="{StaticResource ButtonStyle}"/>
+        <Button Content="SAVE" Grid.Row="2" Grid.Column="1" Margin="164,10,10,0" Click="SaveButton_Click" Height="28" VerticalAlignment="Top" Style="{StaticResource ButtonStyle}"/>
 
-        <DataGrid x:Name="OreDataGrid" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,10,10,10" AutoGenerateColumns="False">
+        <DataGrid x:Name="OreDataGrid" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,10,10,10" AutoGenerateColumns="False" FontSize="14" FontWeight="Bold">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Mineral" Binding="{Binding OreName}" Width="*" />
                 <DataGridTextColumn Header="Experience" Binding="{Binding ExpPerOre}" Width="*" />
