--- a/RPGPlugin/Torch GUI/EditOreWindow.xaml
+++ b/RPGPlugin/Torch GUI/EditOreWindow.xaml
@@ -1,7 +1,23 @@
 ﻿<Window x:Class="RPGPlugin.EditOreWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Edit ore" Height="200" Width="350">
+        Title="RPGPLUGIN - EDIT ORE" Height="200" Width="350">
+    <Window.Resources>
+        <Style x:Key="LabelStyle" TargetType="Label">
+            <Setter Property="Foreground" Value="DarkSlateGray"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Margin" Value="10"/>
+        </Style>
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Background" Value="DarkSlateGray"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Padding" Value="10,5"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -14,12 +30,12 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Content="Ore name:" Grid.Column="0" Grid.Row="0" Margin="10"/>
+        <Label Content="Ore name:" Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}"/>
         <TextBox x:Name="OreNameTextBox" Grid.Column="1" Grid.Row="0" Margin="10"/>
 
-        <Label Content="Exp per ore:" Grid.Column="0" Grid.Row="1" Margin="10"/>
+        <Label Content="Exp per ore:" Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}"/>
         <TextBox x:Name="ExpPerOreTextBox" Grid.Column="1" Grid.Row="1" Margin="10"/>
 
-        <Button Content="Save" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,59" Click="AddButton_Click" Width="73" Height="23"/>
+        <Button Content="SAVE" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,54" Click="AddButton_Click" Width="73" Style="{StaticResource ButtonStyle}"/>
     </Grid>
 </Window>
