--- a/RPGPlugin/Torch GUI/RPGPluginControl.xaml
+++ b/RPGPlugin/Torch GUI/RPGPluginControl.xaml
@@ -8,7 +8,11 @@
       d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
-        <Style x:Key="TabItemStyle" TargetType="TabItem">
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/RPGPlugin;component/CustomStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <Style x:Key="TabItemStyle" TargetType="TabItem">
             <Setter Property="Foreground" Value="DarkSlateGray"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
@@ -40,6 +44,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        </ResourceDictionary>
     </UserControl.Resources>
 
     <Grid>
@@ -71,6 +76,9 @@
                     </Button>
 
                     <Image Source="/RPGPlugin;component/Image/Donate-Button.png" Margin="0,0,10,10" MouseLeftButtonDown="Donate_Click" Stretch="Uniform" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="200" Height="69"/>
+
+                    <CheckBox Style="{StaticResource OrangeSwitchStyle}" />
+
                 </Grid>
             </TabItem>
 
