--- a/RPGPlugin/Torch GUI/AddItemWindow.xaml
+++ b/RPGPlugin/Torch GUI/AddItemWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" mc:Ignorable="d" x:Class="RPGPlugin.AddOreWindow"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" mc:Ignorable="d" x:Class="RPGPlugin.AddItemWindow"
         Title="RPGPLUGIN - ADD NEW ORE" Height="300" Width="350">
     <Window.Resources>
         <Style x:Key="LabelStyle" TargetType="{x:Type Label}">
@@ -245,15 +245,15 @@
         </Grid.ColumnDefinitions>
 
         <Label Content="Ore name:" Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}"/>
-        <TextBox x:Name="OreNameTextBox" Grid.Column="1" Grid.Row="0" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
+        <TextBox x:Name="ItemNameTextBox" Grid.Column="1" Grid.Row="0" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
 
         <Label Content="Exp per ore:" Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}"/>
-        <TextBox x:Name="ExpPerOreTextBox" Grid.Column="1" Grid.Row="1" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
+        <TextBox x:Name="ExpPerItemTextBox" Grid.Column="1" Grid.Row="1" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
 
-        <Button Content="ADD ORE" Grid.Row="2" Grid.Column="0" Margin="10,10,10,0" Click="AddOreButton_Click" Height="28" VerticalAlignment="Top" Style="{StaticResource ButtonStyle}" FontWeight="Bold"/>
+        <Button Content="ADD ORE" Grid.Row="2" Grid.Column="0" Margin="10,10,10,0" Click="AddItemButton_Click" Height="28" VerticalAlignment="Top" Style="{StaticResource ButtonStyle}" FontWeight="Bold"/>
         <Button Content="SAVE" Grid.Row="2" Grid.Column="1" Margin="164,10,10,0" Click="SaveButton_Click" Height="28" VerticalAlignment="Top" Style="{StaticResource ButtonStyle}" FontWeight="Bold"/>
 
-        <DataGrid x:Name="OreDataGrid" Grid.Row="3" Grid.ColumnSpan="2" Margin="10" AutoGenerateColumns="False" FontSize="14" FontWeight="Bold" Style="{StaticResource DataGridStyle}">
+        <DataGrid x:Name="ItemDataGrid" Grid.Row="3" Grid.ColumnSpan="2" Margin="10" AutoGenerateColumns="False" FontSize="14" FontWeight="Bold" Style="{StaticResource DataGridStyle}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="MINERAL" Binding="{Binding OreName}" Width="*" HeaderStyle="{StaticResource DataGridColumnHeaderStyle}" />
                 <DataGridTextColumn Header="EXPERIENCE" Binding="{Binding ExpPerOre}" Width="*" HeaderStyle="{StaticResource DataGridColumnHeaderStyle2}"/>
