--- a/RPGPlugin/Torch GUI/EditItemWindow.xaml
+++ b/RPGPlugin/Torch GUI/EditItemWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RPGPlugin.EditOreWindow"
+﻿<Window x:Class="RPGPlugin.EditItemWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="RPGPLUGIN - EDIT ORE" Height="200" Width="350">
@@ -106,11 +106,12 @@
         </Grid.ColumnDefinitions>
 
         <Label Content="Ore name:" Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}"/>
-        <TextBox x:Name="OreNameTextBox" Grid.Column="1" Grid.Row="0" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
+        <TextBox x:Name="ItemNameTextBox" Grid.Column="1" Grid.Row="0" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
 
         <Label Content="Exp per ore:" Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}"/>
-        <TextBox x:Name="ExpPerOreTextBox" Grid.Column="1" Grid.Row="1" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
+        <TextBox x:Name="ExpPerItemTextBox" Grid.Column="1" Grid.Row="1" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
 
         <Button Content="SAVE" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,54" Click="AddButton_Click" Width="73" Style="{DynamicResource ButtonStyle}" FontWeight="Bold"/>
+
     </Grid>
 </Window>
